# SNII

./: .gitignore  CMakeLists.txt
bench/: CMakeLists.txt  bench_jsonl.cpp  bench_jsonl.h  bench_jsonl_test.cpp  bench_manifest.cpp  bench_manifest.h  bench_manifest_test.cpp  clucene_adapter.cpp  clucene_adapter.h  clucene_oss_adapter.cpp  clucene_oss_adapter.h  clucene_oss_sharded_adapter.cpp  clucene_oss_sharded_adapter.h  corpus_gen.cpp  corpus_gen.h  corpus_gen_test.cpp  corpus_loader.cpp  corpus_loader.h  corpus_loader_test.cpp  docid_range.h  doris_english_analyzer.cpp  doris_english_analyzer.h  doris_english_analyzer_test.cpp  main.cpp  metric_gate.cpp  metric_gate.h  metric_gate_test.cpp  oss_cleanup.cpp  oss_cleanup.h  oss_clucene_directory.cpp  oss_clucene_directory.h  oss_gate.cpp  oss_gate.h  oss_gate_test.cpp  parallel_tokenizer.cpp  parallel_tokenizer.h  parallel_tokenizer_test.cpp  parquet_corpus_reader.cpp  parquet_corpus_reader.h  parquet_corpus_reader_test.cpp  (+15 more)
cmake/: FindArrowParquet.cmake  FindAwsSdk.cmake  FindCLucene.cmake  FindGTestPrebuilt.cmake
core/: CMakeLists.txt
core/include/snii/common/: slice.h  status.h
core/include/snii/encoding/: byte_sink.h  byte_source.h  crc32c.h  pfor.h  section_framer.h  varint.h  zstd_codec.h
core/include/snii/format/: bootstrap_header.h  bsbf.h  dict_block.h  dict_block_directory.h  dict_entry.h  format_constants.h  frq_pod.h  frq_prelude.h  logical_index_directory.h  norms_pod.h  null_bitmap.h  per_index_meta.h  prx_pod.h  sampled_term_index.h  stats_block.h  tail_meta_region.h  tail_pointer.h  xfilter.h
core/include/snii/io/: batch_range_fetcher.h  file_reader.h  file_writer.h  io_metrics.h  local_file.h  metered_file_reader.h  s3_object_store.h
core/include/snii/query/: bm25_scorer.h  boolean_query.h  docid_sink.h  phrase_query.h  prefix_query.h  query_profile.h  regexp_query.h  scoring_query.h  term_query.h  wildcard_query.h
core/include/snii/query/internal/: docid_posting_reader.h  docid_set_ops.h  docid_union.h  position_math.h  term_expansion.h
core/include/snii/reader/: logical_index_reader.h  snii_segment_reader.h  windowed_posting.h
core/include/snii/stats/: snii_stats_provider.h
core/include/snii/writer/: compact_posting_pool.h  logical_index_writer.h  memory_reporter.h  snii_compound_writer.h  spill_run_codec.h  spillable_byte_buffer.h  spimi_term_buffer.h  temp_dir.h  temp_section_file.h
core/src/: placeholder.cpp
core/src/common/: status.cpp
core/src/encoding/: byte_sink.cpp  byte_source.cpp  crc32c.cpp  pfor.cpp  section_framer.cpp  varint.cpp  zstd_codec.cpp
core/src/format/: bootstrap_header.cpp  bsbf.cpp  dict_block.cpp  dict_block_directory.cpp  dict_entry.cpp  frq_pod.cpp  frq_prelude.cpp  logical_index_directory.cpp  norms_pod.cpp  null_bitmap.cpp  per_index_meta.cpp  prx_pod.cpp  sampled_term_index.cpp  stats_block.cpp  tail_meta_region.cpp  tail_pointer.cpp  xfilter.cpp
core/src/io/: batch_range_fetcher.cpp  local_file.cpp  metered_file_reader.cpp  s3_object_store.cpp
core/src/query/: bm25_scorer.cpp  boolean_query.cpp  docid_posting_reader.cpp  docid_set_ops.cpp  docid_union.cpp  phrase_query.cpp  prefix_query.cpp  query_profile.cpp  regexp_query.cpp  scoring_query.cpp  term_expansion.cpp  term_query.cpp  wildcard_query.cpp
core/src/reader/: logical_index_reader.cpp  snii_segment_reader.cpp  windowed_posting.cpp
core/src/stats/: snii_stats_provider.cpp
core/src/writer/: compact_posting_pool.cpp  logical_index_writer.cpp  snii_compound_writer.cpp  spill_run_codec.cpp  spimi_term_buffer.cpp  temp_section_file.cpp
core/tests/: CMakeLists.txt  smoke_test.cpp
core/tests/common/: slice_test.cpp  status_test.cpp
core/tests/encoding/: byte_sink_test.cpp  byte_source_test.cpp  crc32c_test.cpp  pfor_test.cpp  section_framer_test.cpp  varint_test.cpp  zstd_codec_test.cpp
core/tests/format/: bootstrap_header_test.cpp  bsbf_test.cpp  dict_block_directory_test.cpp  dict_block_test.cpp  dict_entry_test.cpp  format_constants_test.cpp  frq_pod_test.cpp  frq_prelude_test.cpp  logical_index_directory_test.cpp  norms_pod_test.cpp  null_bitmap_test.cpp  per_index_meta_test.cpp  prx_pod_test.cpp  sampled_term_index_test.cpp  stats_block_test.cpp  tail_meta_region_test.cpp  tail_pointer_test.cpp  xfilter_test.cpp
core/tests/io/: batch_range_fetcher_test.cpp  local_file_test.cpp  metered_file_reader_test.cpp  s3_object_store_test.cpp
core/tests/query/: boolean_query_test.cpp  byte_skip_test.cpp  docid_set_ops_test.cpp  pattern_query_test.cpp  phrase_prefix_query_test.cpp  phrase_skip_test.cpp  position_math_test.cpp  posting_grouping_test.cpp  prefix_query_test.cpp  query_operator_error_test.cpp  query_profile_test.cpp  scoring_query_test.cpp  scoring_wand_selective_test.cpp
core/tests/reader/: snii_end_to_end_test.cpp
core/tests/writer/: compact_posting_pool_test.cpp  memory_reporter_test.cpp  memory_reporter_wiring_test.cpp  phase_a_readback_test.cpp  posting_interleave_test.cpp  snii_compound_writer_test.cpp  spill_run_codec_test.cpp  spillable_byte_buffer_test.cpp  spimi_spill_writer_test.cpp  spimi_streaming_writer_test.cpp  spimi_term_buffer_test.cpp  temp_dir_test.cpp  temp_section_file_test.cpp
docs/: benchmark-results.md
docs/design/: SNII-design-spec.source.md  build-memory-accounting-flush-design.md  build-memory-budget-design.md  frqprx-interleave-design.md  query-v2-snii-adaptation-design.md  snii-native-query-operators.md
docs/superpowers/plans/: 2026-06-17-snii-phase1-foundation.md
docs/superpowers/specs/: 2026-06-17-snii-design.md  2026-06-18-snii-read-byte-optimizations-design.md  2026-06-18-snii-subblock-skipping-design.md  2026-06-20-snii-e2e-bench-design.md  2026-06-21-enriched-bench-plan.md
examples/: CMakeLists.txt  doris_writer_demo.cpp  oss_latency_demo.cpp
